# osu-beatmap-downloader

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
src/: downloader.rs  fetcher.rs  main.rs  types.rs
