[package]
name = "osu-beatmap-downloader"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "osu-beatmap-downloader"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["stream", "json"] }
rosu-v2 = "0.9"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
indicatif = "0.17"
futures-util = "0.3"
rand = "0.8"
